--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <section>
                 <div>
-                    <h2>Canais e Stremers</h2>
+                    <h2>Canais e Streamers</h2>
                     <p>Lista de canais e transmissões que não perco!</p>
 
                     <ul class="channel-list">
